Fix test failures by clearing pre-loaded student data